<resources>
    <string name="app_name">Train Radar</string>
    <string name="title_activity_radar">Train Radar</string>
    <string name="title_activity_near_trains">Nearest trains</string>
    <string name="title_activity_map">Train Route</string>
    <string-array name="tab_titles">
        <item>Route</item>
        <item>Map</item>
    </string-array>

    <string name="time_format">hh:mm a</string>
    <string name="default_time">00:00 AM</string>
    <string name="default_dist">0m</string>
    <string name="distance_label">%1$.1f km</string>
    <string name="hour_eta_label">%1$dh %2$dm on arrival</string>
    <string name="minute_eta_label">%1$dm on arrival</string>
    <string name="cancelled">Cancelled</string>

    <string name="update_message">Would you like to update Train Radar to the %1$s version?</string>
    <string name="position_request_message">Allow TrainRadar to access your location to monitor trains in your area</string>
    <string name="position_error_message">Cannot retrieve your position</string>
    <string name="search_message">Insert train number</string>
    <string name="not_found_message">Train not found</string>
    <string name="not_left_message">The train didn\'t left yet</string>
    <string name="many_train_message">Select a train</string>
    <string name="select_message">Choose a category</string>
    <string name="arrival_label">Arrival:</string>
    <string name="departure_label">Departure:</string>
    <string name="search">Find train</string>
    <string name="path_message">Show route</string>
    <string name="refresh">Refresh</string>
    <string name="filter">Filter</string>

    <string name="train">Train</string>
    <string name="station">Station</string>
    <string name="stop">Stop</string>
    <string name="stops">Stops</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="path">Path</string>

    <plurals name="advance_message">
        <item quantity="one">%1$d minute early</item>
        <item quantity="other">%1$d minutes early</item>
    </plurals>
    <plurals name="delay_message">
        <item quantity="one">%1$d minute late</item>
        <item quantity="other">%1$d minutes late</item>
    </plurals>
    <string name="on_time_message">On time</string>
    <string name="advance_message_compact">%1$d min</string>
    <string name="delay_message_compact">+%1$d min</string>
</resources>
