<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_alignParentBottom="false"
    android:background="@drawable/round_rect">

    <TextView
        android:id="@+id/lblDetailTrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/train"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/lblDetailDelay"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblDetailStDeparture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/departure"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/lblDetailDeparture"
        app:layout_constraintEnd_toStartOf="@+id/lblDetailStArrival"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblDetailTrain" />

    <TextView
        android:id="@+id/lblDetailDeparture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/default_time"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/trainStatusBar"
        app:layout_constraintEnd_toStartOf="@+id/lblDetailArrival"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDetailStDeparture" />

    <TextView
        android:id="@+id/lblDetailStArrival"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/arrival"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/lblDetailDeparture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lblDetailStDeparture"
        app:layout_constraintTop_toBottomOf="@id/lblDetailTrain" />

    <TextView
        android:id="@+id/lblDetailArrival"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/default_time"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/trainStatusBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lblDetailDeparture"
        app:layout_constraintTop_toBottomOf="@+id/lblDetailStDeparture" />

    <SeekBar
        android:id="@+id/trainStatusBar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:max="100"
        android:min="0"
        android:progress="50"
        android:progressTint="@color/colorAccent"
        android:thumb="@drawable/thumb_train"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDetailDeparture"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/lblDetailDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/lblDetailStArrival"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
